--- a/index.html
+++ b/index.html
@@ -106,6 +106,19 @@
   </div>
 </div> 
 
+
+
+/* Responsive */
+@media (max-width: 768px) {
+  .slides img {
+    height: 250px;
+  }
+}
+
+
+
+
+    
 <!-- photo gallery here -->
  <div id="schoolGallery" class="carousel slide" data-bs-ride="carousel" data-bs-interval="1000">
   <div class="carousel-inner">
