--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 <div class="card-row">
   <div class="card">
-    <img src="1.jpg" alt="Image 1">
+    <img src="1.jpg" alt="Flashback 3" style="width: 100%; height: auto; border-radius: 10px; box-shadow: 0 4px 8px rgba(0,0,0,0.2);">
     <p>Xafladii Sanad Dugsiyeedka 2024-2025</p>
   </div>
   <div class="card">
