--- a/index.html
+++ b/index.html
@@ -55,24 +55,18 @@
 <!-- ============================================== -->
  <h1 style="text-align: center;">Xafladii sanad dugsiyeedka 2024-2025</h1>
 
-<div style="display: flex; flex-wrap: wrap; gap: 20px; justify-content: center; padding: 20px;">
 
 
-
-
-
-
-
-
-
+    
+<div style="display: flex; flex-wrap: wrap; gap: 20px; justify-content: center; padding: 30px;">
 
 
 
     
 <div class="card-row">
   <div class="card">
-    <img src="1.jpg" alt="Flashback 1" style="width: 100%; height: auto; border-radius: 10px; box-shadow: 0 4px 8px rgba(0,0,0,0.2);">
-    <p style="margin-top: 10px; font-size: 16px; color: #333;">Xafladii Sanad Dugsiyeedka 2024-2025</p>
+    <img src="1.jpg"Image 1">
+    <p>Xafladii Sanad Dugsiyeedka 2024-2025</p>
   </div>
   <div class="card">
     <img src="2.jpg" alt="Image 2">
