--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 
 
     
-<div style="display: flex; flex-wrap: wrap; gap: 20px; justify-content: center; padding: 30px;">
-
+<div style="display: flex; flex-wrap: wrap; gap: 20px; justify-content: center; padding: 20px;">
+<div style="max-width: 100%; overflow-x: hidden; padding: 0 10px;">
 
 
     
@@ -102,6 +102,7 @@
       <img src="pic3.jpg" alt="Computer Room">
     </a>
     <p>Xafladii Sanad Dugsiyeedka 2024-2025</p>
+  </div>
   </div>
 
   <!-- 🎉 More cards below -->
