--- a/index.html
+++ b/index.html
@@ -264,6 +264,12 @@
   </button>
 </div>
 <!-- another section with pictures -->
+
+
+<div style="display: flex; flex-wrap: wrap; gap: 20px; justify-content: center; padding: 20px;">
+
+
+    
  <div class="card-row">
   <div class="card">
     <img src="gallery28.jpg" alt="Image 1">
@@ -314,6 +320,11 @@
     <p>Xafladii Sanad Dugsiyeedka 2024-2025</p>
   </div>
 </div> 
+
+
+</div>
+
+    
 <!-- ================== skills Bar ================== -->
 <!-- photo gallery here -->
  <div id="schoolGallery" class="carousel slide" data-bs-ride="carousel" data-bs-interval="1000">
@@ -473,7 +484,6 @@
 
 
 
-
 <!-- footer party -->
  <footer class="footer">
   <div class="footer-content">
@@ -511,6 +521,8 @@
     &copy; 2025 ABU HUREYRA SCHOOL. All rights reserved.
     <a href="#" class="back-to-top">↑ Back to Top</a>
   </div>
+
+
 </footer>
 
 
